3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/skill_util.c: don't try to send a message if monster killed/removed.
Ryo 2005-07-23

socket/init.c: settings values to 0 before using'em works better, usually ^_-
Ryo 2005-07-22

random_maps/random_map.h: Add prototype for set_random_map_variable().
server/main.c: Remove prototype for set_random_map_variable().
lib/Makefile.am, lib/Makefile.in, lib/help/whereabouts: Add help for
   whereabouts command.
server/apply.c: Properly terminate destination string with '\0' in
   apply_item_transformer(). Avoid clearing the string buffer multiple times.
Andreas Kirschbaum 2005-07-20

doc/Developers/item_transformation: fixed documentation.
server/apply.c: remove incorrect comment. Item transformer uses food for max use.
Replaced some hardcoded values with define. Modified files:
 common/arch.c
 include/object.h
 plugin/plugin_python.c
 server/apply.c attack.c build_map.c spell_attack.c spell_effect.c time.c
Ryo 2005-07-19

include/win32.h: add PLUGIN_SUFFIX definition.
Ryo 2005-07-18

server/plugins.c: Merge mostly identical code from #ifdef WIN32 and #else
   blocks. Use opendir/readdir/closedir instead scandir for Unix because WIN32
   probably does not have these functions. Prevent loading one plugin multiple
   times.
include/sproto.h: Update prototypes for plugin functions.
server/c_wiz.c: Add success/failure messages to plugin and plugout commands.
   Do not crash due to missing parameter.
Andreas Kirschbaum 2005-07-18

server/pets: Fix off-by-one error in follow_owner().
server/c_wiz: Allow the summon and teleport commands to place the summoned
   player/DM north-west of DM/player.
Andreas Kirschbaum 2005-07-17
